Fixed z-indexing issues

--- a/css.css
+++ b/css.css
@@ -28,7 +28,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 3;
+  z-index: 4;
 }
 .hidden{
   transition: 0.5s;
